[package]
name = "rust-crud"
version = "0.1.0"
authors = ["Konstantinos Keramaris <konkeramaris@gmail.com>"]
edition = "2018"

[dependencies]
axum = "0.6.20"
tower-http = { version = "0.4.0", features = ["cors","trace"] }
tracing-subscriber = "0.3.17"
chrono = { version = "0.4.23", features = ["serde"] }
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = {version="0.7.1", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"]}
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
serde_json = "1.0.95"
tower = "0.4.13"
log = "0.4.19"
axum-macros = "0.3.8"
strum_macros = "0.25.1"
tracing = "0.1.37"
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
hyper = {version="0.14.27", features = ["full"] }
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
dotenvy = "0.15.7"

[dev-dependencies]
mime = "0.3"
